2025-09-20T00:56:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17873092603 # 772
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-20
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 397 571 / 400 574
* notice: next accum: outdated-unq outdated-all / unq all: 398 572 / 400 574
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-05] / []

2025-09-19T00:59:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17845336352 # 771
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-19
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 397 571 / 399 573
* notice: next accum: outdated-unq outdated-all / unq all: 397 571 / 400 574
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-18]

2025-09-10T00:58:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17599771213 # 762
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-10
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 396 570 / 399 573
* notice: next accum: outdated-unq outdated-all / unq all: 397 571 / 399 573
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-26] / []

2025-09-08T01:01:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17536534550 # 760