@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-09-20T00:56:21Z",
-  "count_outdated" : 572,
-  "uniques_outdated" : 398,
-  "count" : 574,
-  "uniques" : 400,
+  "timestamp" : "2025-09-21T01:04:02Z",
+  "count_outdated" : 573,
+  "uniques_outdated" : 399,
+  "count" : 575,
+  "uniques" : 401,
   "clones" : [
     {
-      "timestamp": "2025-09-07T00:00:00Z",
+      "timestamp": "2025-09-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
@@ -15,7 +15,7 @@
       "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2025-09-18T00:00:00Z",
+      "timestamp": "2025-09-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
